Minor fix to sort the header alignment for viewing an entry.

--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -68,7 +68,7 @@
 .entry-large h3 {
   margin: 0px;
   font-weight:700;
-  text-align: left;
+  text-align: center;
 }
 
 .entry {
